--- a/Backend/MagAsyst/docker-compose.yml
+++ b/Backend/MagAsyst/docker-compose.yml
@@ -7,8 +7,8 @@ services:
       - 8000:8080
     environment:
       SPRING_DATASOURCE_URL: jdbc:mysql://docker-mysql:3306/testdb
-      SPRING_DATASOURCE_USERNAME: root
-      SPRING_DATASOURCE_PASSWORD: root
+      SPRING_DATASOURCE_USERNAME: *****
+      SPRING_DATASOURCE_PASSWORD: *****
     depends_on:
       - docker-mysql
     networks:
@@ -18,9 +18,9 @@ services:
     image: mysql
 
     environment:
-      - MYSQL_ROOT_PASSWORD = root
+      - MYSQL_ROOT_PASSWORD = *****
       - MYSQL_DATABASE = testdb
-      - MYSQL_PASSWORD = root
+      - MYSQL_PASSWORD = *****
       - DATABASE_HOST = docker-mysql
     ports:
       - 3308:3306
