--- a/Backend/MagAsyst/src/main/resources/application.properties
+++ b/Backend/MagAsyst/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-
+#--- Docker ---
+#spring.datasource.url=jdbc:mysql://docker-mysql:3306/testdb
+#--------------
 spring.datasource.url=jdbc:mysql://localhost:3306/testdb
 spring.datasource.username=****
 spring.datasource.password=****
